# ledger-alephium

./: .gitignore  Cargo.toml  Makefile  README.md  flex.hex  flex.json  issue.md  ledger_app.toml  nanos.hex  nanos.json  nanosplus.hex  nanosplus.json  nanox.hex  nanox.json  stax.hex  stax.json
.github/workflows/: build_and_function_tests.yml  codeql.yml  coding_style_checks.yml  misspellings_checks.yml  publish.yml  rust.yml  speculos.yml  test.yml
app/: Cargo.toml  README.md  deny.toml
app/.cargo/: config
app/src/: app_utils.rs  blake2b_hasher.rs  blind_signing.rs  debug.rs  display.rs  error_code.rs  handler.rs  main.rs  nbgl.rs  nvm_buffer.rs  public_key.rs  settings.rs  sign_tx_context.rs  swapping_buffer.rs  token_verifier.rs  tx_reviewer.rs
app/src/ledger_sdk_stub/: mod.rs  multi_field_review.rs  nbgl_display.rs  nbgl_review.rs  nvm.rs  swapping_buffer.rs
app/src/nvm/: mod.rs  nvm_data.rs  swapping_buffer.rs
app/src/ui/: display.rs  mod.rs  nbgl.rs  tx_reviewer.rs
app/src/ui/bagl/: home.rs  mod.rs  tx_reviewer_inner.rs
app/src/ui/nbgl/: mod.rs  tx_reviewer_inner.rs
configs/: Dockerfile  app-builder.Dockerfile  cargo_global_config.toml  speculos.Dockerfile
doc/: apdu.md
docs/: apdu.md
js/: README.md  package-lock.json  package.json
js/docker/: docker-compose.yaml
js/merkle-tree/: proofs.json  token.json
js/src/: index.ts  ledger-app.ts  merkle.ts  serde.test.ts  serde.ts  tx-encoder.ts  types.ts
js/test/: merkle.test.ts  release.test.ts  speculos.test.ts  tx-encoder.test.ts  utils.ts  wallet.test.ts
release/: nanos.hex  nanos.json  nanosplus.hex  nanosplus.json  nanox.hex  nanox.json
release/output/: nanosplus.hex  nanox.hex  nanox.json
rust-app/.cargo/: config
utils/: Cargo.toml
utils/src/: base58.rs  buffer.rs  decode.rs  lib.rs  temp_data.rs  transaction.rs
utils/src/types/: asset_output.rs  asset_output_ref.rs  avector.rs  bigint.rs  bool.rs  byte.rs  byte32.rs  byte_string.rs  compact_integer.rs  hint.rs  i256.rs  i32.rs  instr.rs  lockup_script.rs  macros.rs  method.rs  method_selector.rs  mod.rs  public_key.rs  script.rs  timestamp.rs  token.rs  tx_input.rs  u16.rs  u256.rs  unlock_script.rs  unsigned_tx.rs  val.rs
