[package]
name = "app"
version = "0.2.0"
authors = ["alephium devs"]
edition = "2021"

[dependencies]
ledger_device_sdk = "=1.11.1"
ledger_secure_sdk_sys = "=1.4.2"
utils= { path = "../utils" }

[features]
default = ["device"]
debug = ["ledger_device_sdk/speculos", "ledger_device_sdk/speculos"]
device = []

[profile.release]
opt-level = 'z'
lto = true

[package.metadata.ledger]
name = "Alephium"
curve = ["secp256k1"]
flags = "0"
path = ["m/44'/1234'"]

[package.metadata.ledger.nanos]
icon = "alph.gif"

[package.metadata.ledger.nanox]
icon = "alph_14x14.gif"

[package.metadata.ledger.nanosplus]
icon = "alph_14x14.gif"
