[package]
name = "app"
version = "0.4.0"
authors = ["alephium devs"]
edition = "2021"

[dependencies]
ledger_device_sdk = "=1.12.0"
ledger_secure_sdk_sys = "=1.4.3"
utils= { path = "../utils" }
numtoa = "=0.2.4"
shlex = { version = "1.3.0", default-features = false } # patch for ledger_device_sdk dependency

[features]
default = ["device"]
debug = ["ledger_device_sdk/speculos", "ledger_device_sdk/speculos"]
device = []

[profile.release]
opt-level = 'z'
lto = true

[package.metadata.ledger]
name = "Alephium"
curve = ["secp256k1"]
flags = "0"
path = ["m/44'/1234'"]

[package.metadata.ledger.nanos]
icon = "alph_16x16.gif"

[package.metadata.ledger.nanox]
icon = "alph_14x14.gif"

[package.metadata.ledger.nanosplus]
icon = "alph_14x14.gif"

[package.metadata.ledger.stax]
icon = "alph_32x32.gif"

[package.metadata.ledger.flex]
icon = "alph_64x64.gif"
